--- a/runtime/index.Rmd
+++ b/runtime/index.Rmd
@@ -36,7 +36,7 @@ dataTypesTargets  <- setdiff(getTypes(allTargetParams), categories)
 
 ## Summary tables
 source('source/summaryparams.R', local = FALSE)
-mu <- get_full_mu(allGaitParams, allTargetParams, allQResults, categories, avg_feet=TRUE)
+mu <- get_full_mu(allGaitParams, allTargetParams, allQResults, categories, avg_feet=TRUE, add_diff = TRUE)
 muDataTypes <- setdiff(getTypes(mu), categories)
 muVars <- colnames(mu)
 ## Plotting code
