--- a/runtime/pages/page9_boxplots.Rmd
+++ b/runtime/pages/page9_boxplots.Rmd
@@ -5,6 +5,7 @@ selectizeInput("plotVar", "Variable", choices = muVars, selected = "stepWidths.s
 #selectizeInput("plotMetric", "Metric", choices = varMetrics, selected = varMetrics[1], multiple = FALSE)
 selectizeInput("varCategory", "Category", choices = categoriesExtraInputs, selected = "VFD", multiple = TRUE)
 selectizeInput("colorCategory", "Color", choices = categoriesExtraInputs, selected = "None", multiple = FALSE)
+selectizeInput("shapeCategory", "Shape", choices = categoriesExtraInputs, selected = "None", multiple = FALSE)
 checkboxInput("doPaired", "Make it a paired plot",value=FALSE)
 selectizeInput("pairedCategory", "Paired Category", choices = categoriesExtraInputs, selected = "None", multiple = FALSE)
 ```
@@ -21,10 +22,10 @@ imageOutput("var")
 output$var <- renderSVG({ reactive({
     mu <- get_mu_dyn_long()
     if (!input$doPaired) {
-      plot_boxplots(mu, participants, input$plotVar, input$varCategory, input$colorCategory, baseSize = input$baseSize)
+      plot_boxplots(mu, input$plotVar, input$varCategory, input$colorCategory, input$shapeCategory, input$baseSize)
     }
     else {
-      plot_paired(mu, input$plotVar, input$pairedCategory, input$varCategory, input$colorCategory, input$baseSize)
+      plot_paired(mu, input$plotVar, input$pairedCategory, input$varCategory, input$colorCategory, input$shapeCategory, input$baseSize)
     }
   })
 })
